docs: add signing info

--- a/src/docs/blog/post/anatomy.en-US.mdx
+++ b/src/docs/blog/post/anatomy.en-US.mdx
@@ -272,3 +272,5 @@ Plugins need to provide internationalization resources, and the internationaliza
 To further abstract concepts such as services and commands for easier use, a Facade API needs to be provided.
 
 The Facade API for filtering is primarily contained in the file [f-filter.ts](https://github.com/dream-num/univer/blob/dev/packages/facade/src/apis/sheets/f-filter.ts).
+
+<p className="text-gray-500 text-sm mt-8">Author: [Wenzhao Hu](https://github.com/wzhudev), Head of Engineering</p>
