docs(facade): add facade worksheet row column docs

--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -157,6 +157,368 @@ const sheetId = 'SheetId';
 univerAPI.executeCommand('sheet.command.active-sheet', { unitId: workbookId, subUnitId: sheetId });
 ```
 
+## Row
+
+### insertRowAfter(afterPosition)
+
+Inserts a row after the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts a row after the first row position
+sheet.insertRowAfter(0);
+```
+
+### insertRowBefore(beforePosition)
+
+Inserts a row before the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts a row before the first row position
+sheet.insertRowBefore(0);
+```
+
+### insertRows(rowIndex, numRows)
+
+Inserts one or more consecutive blank rows in a sheet starting at the specified location.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Shifts all rows down by three
+sheet.insertRows(0, 3);
+```
+
+### insertRowsAfter(afterPosition, howMany)
+
+Inserts a number of rows after the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts five rows after the first row
+sheet.insertRowsAfter(0, 5);
+```
+
+### insertRowsBefore(beforePosition, howMany)
+
+Inserts a number of rows before the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts five rows before the first row
+sheet.insertRowsBefore(0, 5);
+```
+
+### deleteRow(rowPosition)
+
+Deletes the row at the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Rows start at "0" - this deletes the first row
+sheet.deleteRow(0);
+```
+
+### deleteRows(rowPosition, howMany)
+
+Deletes a number of rows starting at the given row position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Rows start at "0" - this deletes the first two rows
+sheet.deleteRows(0, 2);
+```
+
+### moveRows(rowSpec, destinationIndex)
+
+Moves the rows selected by the given range to the position indicated by the `destinationIndex`. The `rowSpec` itself does not have to exactly represent an entire row or group of rows to move—it selects all rows that the range spans.
+
+```typescript
+// The code below moves rows 1-2 to destination index 5
+// This results in those rows becoming rows 3-4
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Selects row 1 and row 2 to be moved
+const rowSpec = activeSheet.getRange(0,0,2,1);
+activeSheet.moveRows(rowSpec, 5);
+```
+
+### hideRow(row)
+
+Hides the rows in the given range.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This hides the first row
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.hideRow(range);
+```
+
+### hideRows(rowIndex, numRows)
+
+Hides one or more consecutive rows starting at the given index. Use 0-index for this method.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Hides the first three rows
+activeSheet.hideRows(0, 3);
+```
+
+### unhideRow(row)
+
+Unhides the row in the given range.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This unhides the first row if it was previously hidden
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.unhideRow(range);
+```
+
+### showRows(rowIndex, numRows)
+
+Unhides one or more consecutive rows starting at the given index. Use 0-index for this method.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Unhides the first three rows
+activeSheet.showRows(0, 3);
+```
+
+### setRowHeight(rowPosition, height)
+
+Sets the row height of the given row in pixels. By default, rows grow to fit cell contents. If you want to force rows to a specified height, use `setRowHeightsForced(startRow, numRows, height)`.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Sets the first row to a height of 200 pixels
+activeSheet.setRowHeight(0, 200);
+```
+
+### setRowHeights(startRow, numRows, height)
+
+Sets the height of the given rows in pixels. By default, rows grow to fit cell contents. If you want to force rows to a specified height, use `setRowHeightsForced(startRow, numRows, height)`.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Sets the first three rows to a height of 20 pixels
+activeSheet.setRowHeights(0, 3, 20);
+```
+
+### setRowHeightsForced(startRow, numRows, height)
+
+Sets the height of the given rows in pixels. By default, rows grow to fit cell contents. When you use `setRowHeightsForced`, rows are forced to the specified height even if the cell contents are taller than the row height.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Sets the first three rows to a height of 5 pixels
+activeSheet.setRowHeightsForced(0, 3, 5);
+```
+
+## Column
+
+### insertColumnAfter(afterPosition)
+
+Inserts a column after the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts a column after the first column position
+sheet.insertColumnAfter(0);
+```
+
+### insertColumnBefore(beforePosition)
+
+Inserts a column before the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts a column in the first column position
+sheet.insertColumnBefore(0);
+```
+
+### insertColumns(columnIndex, numColumns)
+
+Inserts one or more consecutive blank columns in a sheet starting at the specified location.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Shifts all columns by three
+sheet.insertColumns(0, 3);
+```
+
+### insertColumnsAfter(afterPosition, howMany)
+
+Inserts a given number of columns after the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Inserts two columns after the first column
+sheet.insertColumnsAfter(0, 2);
+```
+
+### insertColumnsBefore(beforePosition, howMany)
+
+Inserts a number of columns before the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This inserts five columns before the first column
+sheet.insertColumnsBefore(0, 5);
+```
+
+### deleteColumn(columnPosition)
+
+Deletes the column at the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Columns start at "0" - this deletes the first column
+sheet.deleteColumn(0);
+```
+
+### deleteColumns(columnPosition, howMany)
+
+Deletes a number of columns starting at the given column position.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Columns start at "0" - this deletes the first two columns
+sheet.deleteColumns(0, 2);
+```
+
+### moveColumns(columnSpec, destinationIndex)
+
+Moves the columns selected by the given range to the position indicated by the `destinationIndex`. The `columnSpec` itself does not have to exactly represent an entire column or group of columns to move—it selects all columns that the range spans.
+
+```typescript
+// The code below moves rows A-B to destination index 5.
+// This results in those columns becoming columns C-D.
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Selects column A and column B to be moved.
+const columnSpec = activeSheet.getRange(0,0,1,2);
+activeSheet.moveColumns(columnSpec, 5);
+```
+
+### hideColumn(column)
+
+Hides the column or columns in the given range.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This hides the first column
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.hideColumn(range);
+```
+
+### hideColumns(columnIndex, numColumns)
+
+Hides one or more consecutive columns starting at the given index. Use 0-index for this method.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Hides the first three columns
+activeSheet.hideColumns(0, 3);
+```
+
+### unhideColumn(column)
+
+Unhides the column in the given range.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// This unhides the first column if it was previously hidden
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.unhideColumn(range);
+```
+
+### showColumns(columnIndex, numColumns)
+
+Unhides one or more consecutive columns starting at the given index. Use 0-index for this method.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Unhides the first three columns
+activeSheet.showColumns(0, 3);
+```
+
+### setColumnWidth(columnPosition, width)
+
+Sets the width of the given column in pixels.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Sets the first column to a width of 200 pixels
+activeSheet.setColumnWidth(0, 200);
+```
+
+### setColumnWidths(startColumn, numColumns, width)
+
+Sets the width of the given columns in pixels.
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// Sets the first three columns to a width of 200 pixels
+activeSheet.setColumnWidths(0, 3, 200);
+```
+
 ## Cell
 
 Cell data is stored in the worksheet as a two-dimensional Map, with the first and second indexes representing the row number and column number respectively.
