--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -157,6 +157,368 @@ const sheetId = 'SheetId';
 univerAPI.executeCommand('sheet.command.active-sheet', { unitId: workbookId, subUnitId: sheetId });
 ```
 
+## 行 Row
+
+### insertRowAfter(afterPosition)
+
+在指定行位置之后插入一行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一行位置后插入一行
+sheet.insertRowAfter(0);
+```
+
+### insertRowBefore(beforePosition)
+
+在指定行位置之前插入一行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一行位置前插入一行
+sheet.insertRowBefore(0);
+```
+
+### insertRows(rowIndex, numRows)
+
+在工作表中从指定位置开始插入一个或多个连续的空白行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将所有行向下移动三位
+sheet.insertRows(0, 3);
+```
+
+### insertRowsAfter(afterPosition, howMany)
+
+在指定行位置之后插入若干行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一行后插入五行
+sheet.insertRowsAfter(0, 5);
+```
+
+### insertRowsBefore(beforePosition, howMany)
+
+在指定行位置之前插入若干行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这在第一行之前插入五行
+sheet.insertRowsBefore(0, 5);
+```
+
+### deleteRow(rowPosition)
+
+删除给定行位置处的行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 行从 0 开始 - 这将删除第一行
+sheet.deleteRow(0);
+```
+
+### deleteRows(rowPosition, howMany)
+
+删除从给定行位置开始的若干行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 行从 0 开始 - 这将删除前两行
+sheet.deleteRows(0, 2);
+```
+
+### moveRows(rowSpec, destinationIndex)
+
+将给定范围选定的行移动到 `destinationIndex` 指示的位置。`rowSpec` 本身不必准确表示要移动的整行或整组行 — 它选择范围跨越的所有行。
+
+```typescript
+// 以下代码将行 1-2 移动到目标索引 5
+// 这会导致这些行变为行 3-4
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 选择要移动的第 1 行和第 2 行
+const rowSpec = activeSheet.getRange(0,0,2,1);
+activeSheet.moveRows(rowSpec, 5);
+```
+
+### hideRow(row)
+
+隐藏指定范围内的行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将隐藏第一行
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.hideRow(range);
+```
+
+### hideRows(rowIndex, numRows)
+
+隐藏从指定索引开始的一个或多个连续行。此方法使用 0 索引。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 隐藏前三行
+activeSheet.hideRows(0, 3);
+```
+
+### unhideRow(row)
+
+取消隐藏指定范围内的行。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 如果第一行之前被隐藏，则取消隐藏第一行
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.unhideRow(range);
+```
+
+### showRows(rowIndex, numRows)
+
+取消隐藏从指定索引开始的一个或多个连续行。此方法使用 0 索引。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 取消隐藏前三行
+activeSheet.showRows(0, 3);
+```
+
+### setRowHeight(rowPosition, height)
+
+设置给定行的行高（以像素为单位）。默认情况下，行会扩展以适应单元格内容的大小。如果想要将行强制设置为指定高度，请使用 `setRowHeightsForced(startRow, numRows, height)`。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将第一行的高度设置为 200 像素
+activeSheet.setRowHeight(0, 200);
+```
+
+### setRowHeights(startRow, numRows, height)
+
+设置给定行的高度（以像素为单位）。默认情况下，行会扩展以适应单元格内容的大小。如果想要将行强制设置为指定高度，请使用 `setRowHeightsForced(startRow, numRows, height)`。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将前三行的高度设置为 20 像素
+activeSheet.setRowHeights(0, 3, 20);
+```
+
+### setRowHeightsForced(startRow, numRows, height)
+
+设置给定行的高度（以像素为单位）。默认情况下，行会扩展以适应单元格内容的大小。使用 `setRowHeightsForced` 时，即使单元格内容高于行高，行也会被强制为指定的高度。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将前三行的高度设置为 5 像素
+activeSheet.setRowHeightsForced(0, 3, 5);
+```
+
+## 列 Column
+
+### insertColumnAfter(afterPosition)
+
+在指定列位置之后插入一列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一列位置后插入一列
+sheet.insertColumnAfter(0);
+```
+
+### insertColumnBefore(beforePosition)
+
+在指定列位置之前插入一列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一列位置插入一列
+sheet.insertColumnBefore(0);
+```
+
+### insertColumns(columnIndex, numColumns)
+
+在工作表中从指定位置开始插入一个或多个连续的空白列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将所有列移动三位
+sheet.insertColumns(0, 3);
+```
+
+### insertColumnsAfter(afterPosition, howMany)
+
+在指定列位置后插入指定数量的列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 在第一列后插入两列
+sheet.insertColumnsAfter(0, 2);
+```
+
+### insertColumnsBefore(beforePosition, howMany)
+
+在指定列位置之前插入若干列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将在第一列之前插入五列
+sheet.insertColumnsBefore(0, 5);
+```
+
+### deleteColumn(columnPosition)
+
+删除给定列位置处的列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 列从 0 开始 - 这将删除第一列
+sheet.deleteColumn(0);
+```
+
+### deleteColumns(columnPosition, howMany)
+
+删除从给定列位置开始的若干列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 列从 0 开始 - 这将删除前两列
+sheet.deleteColumns(0, 2);
+```
+
+### moveColumns(columnSpec, destinationIndex)
+
+将给定范围选定的列移动到 `destinationIndex` 指示的位置。 `columnSpec` 本身不必准确表示要移动的整列或整组列 - 它会选择范围跨越的所有列。
+
+```typescript
+// 以下代码将 A-B 行移动到目标索引 5。
+// 这会导致这些列变成 C-D 列。
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 选择要移动的 A 列和 B 列。
+const columnSpec = activeSheet.getRange(0,0,1,2);
+activeSheet.moveColumns(columnSpec, 5);
+```
+
+### hideColumn(column)
+
+隐藏给定范围内的一列或多列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 这将隐藏第一列
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.hideColumn(range);
+```
+
+### hideColumns(columnIndex, numColumns)
+
+隐藏从给定索引开始的一个或多个连续列。此方法使用 0 索引。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 隐藏前三列
+activeSheet.hideColumns(0, 3);
+```
+
+### unhideColumn(column)
+
+取消隐藏指定范围内的列。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 如果第一列之前被隐藏，则取消隐藏
+const range = activeSheet.getRange(0,0,0,0);
+activeSheet.unhideColumn(range);
+```
+
+### showColumns(columnIndex, numColumns)
+
+取消隐藏从指定索引开始的一个或多个连续列。此方法使用 0 索引。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 取消隐藏前三列
+activeSheet.showColumns(0, 3);
+```
+
+### setColumnWidth(columnPosition, width)
+
+设置指定列的宽度（以像素为单位）。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将第一列的宽度设置为 200 像素
+activeSheet.setColumnWidth(0, 200);
+```
+
+### setColumnWidths(startColumn, numColumns, width)
+
+设置指定列的宽度（以像素为单位）。
+
+```typescript
+const activeWorkbook = univerAPI.getActiveWorkbook();
+const activeSheet = activeWorkbook.getActiveSheet();
+
+// 将前三列的宽度设置为 200 像素
+activeSheet.setColumnWidths(0, 3, 200);
+```
+
 ## 单元格 Cell
 
 单元格数据以二维 Map 的形式存储在工作表中，一二级索引分别代表行号和列号。
