--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -25,13 +25,21 @@ If you prefer to start with a local development environment, you can use the fol
 
 <Tabs items={['pnpm', 'npm']}>
   <Tabs.Tab label="pnpm">
+    Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
+
     ```shell
-    pnpm dlx degit dream-num/univer-sheet-start-kit [your-app-name]
+    pnpm dlx degit dream-num/univer-sheet-start-kit
+    cd univer-sheet-start-kit
+    pnpm install && pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
+    Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
+
     ```shell
-    npx degit dream-num/univer-sheet-start-kit [your-app-name]
+    npx degit dream-num/univer-sheet-start-kit
+    cd univer-sheet-start-kit
+    npm install && npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
@@ -57,9 +65,11 @@ Of course, you may want more than just the basics. If you're looking to add feat
 
   <Tabs items={['pnpm', 'npm', 'Without package manager']}>
     <Tabs.Tab label="pnpm">
+      Run the following command requires your device has `nodejs >= 18`, `pnpm >= 7` and `git` installed.
+
       ```shell
-      pnpm dlx degit dream-num/univer-pro-sheet-start-kit [your-app-name]
-      cd [your-app-name] && pnpm install # pnpm version >= 8
+      pnpm dlx degit dream-num/univer-pro-sheet-start-kit
+      cd univer-pro-sheet-start-kit && pnpm install # pnpm version >= 8
       pnpm dev
       ```
       <Callout emoji="⚠️">
@@ -72,9 +82,11 @@ Of course, you may want more than just the basics. If you're looking to add feat
     </Tabs.Tab>
 
     <Tabs.Tab label="npm">
+      Run the following command requires your device has `nodejs >= 18`, `npm >= 8` and `git` installed.
+
       ```shell
-      npx degit dream-num/univer-pro-sheet-start-kit [your-app-name]
-      cd [your-app-name] && npm install # npm version >= 7
+      npx degit dream-num/univer-pro-sheet-start-kit
+      cd univer-pro-sheet-start-kit && npm install # npm version >= 7
       npm run dev
       ```
       <Callout emoji="⚠️">
