docs: update docs

--- a/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
+++ b/src/docs/guides/doc/getting-started/quickstart.zh-CN.mdx
@@ -29,7 +29,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
     ```shell
     pnpm dlx degit dream-num/univer-doc-start-kit
-    cd univer-doc-start-kit && pnpm install
+    cd univer-doc-start-kit
+    pnpm install && pnpm dev
     ```
   </Tabs.Tab>
   <Tabs.Tab label="npm">
@@ -37,7 +38,8 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
     ```shell
     npx degit dream-num/univer-doc-start-kit
-    cd univer-doc-start-kit && npm install
+    cd univer-doc-start-kit 
+    npm install && npm run dev
     ```
   </Tabs.Tab>
 </Tabs>
