--- a/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/quickstart.en-US.mdx
@@ -69,8 +69,8 @@ Of course, you may want more than just the basics. If you're looking to add feat
 
       ```shell
       pnpm dlx degit dream-num/univer-pro-sheet-start-kit
-      cd univer-pro-sheet-start-kit && pnpm install # pnpm version >= 8
-      pnpm dev
+      cd univer-pro-sheet-start-kit
+      pnpm install && pnpm dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
@@ -86,8 +86,8 @@ Of course, you may want more than just the basics. If you're looking to add feat
 
       ```shell
       npx degit dream-num/univer-pro-sheet-start-kit
-      cd univer-pro-sheet-start-kit && npm install # npm version >= 7
-      npm run dev
+      cd univer-pro-sheet-start-kit
+      npm install && npm run dev
       ```
       <Callout emoji="⚠️">
         If you deploy the server on a different machine, you need to update the `server` configuration in `vite.config.ts` by changing `localhost` to the machine's IP address.
