feat: update server document

--- a/src/docs/guides/general/server/docker.en-US.mdx
+++ b/src/docs/guides/general/server/docker.en-US.mdx
@@ -136,7 +136,7 @@ If you are using your own S3 service, you can refer to the complete [S3 configur
 
 In addition to S3 configuration issues, you should also check whether [the import/export API configuration](/guides/sheet/features/import-export#configuration) of the Univer Server in the frontend project is correct.
 
-If you event have some problem, can use `docker compose logs univer-worker-exchange --since 30m` to get log and contact us for help.
+If you event have some problem, can use `docker compose logs univer-worker-exchange --since 30m` to get log and ask help in community.
 
 ### How to find error when server start failed?
 
