--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -133,7 +133,7 @@ bash uninstall.sh clean # 卸载，删除数据
 
 除了 S3 配置问题，你还应该检查前端工程中的 Univer Server 的[导入导出API的配置](/guides/sheet/features/import-export#configuration)是否正确。
 
-如果依然还是有问题，可以使用 `docker compose logs univer-worker-exchange --since 30m` 导出日志后联系我们。
+如果依然还是有问题，可以使用 `docker compose logs univer-worker-exchange --since 30m` 导出日志，带上日志在社区寻找帮助。
 
 ### 拉取 docker hub 镜像失败？
 
